--- a/app/scripts/templates/login.html
+++ b/app/scripts/templates/login.html
@@ -1,22 +1,15 @@
-<div id="form" data-role="fieldcontain">
-    <label for="firstName">First name:</label>
-    <input type="text" name="firstName" id="firstName" />
-    <label for="firstName">Last name:</label>
-    <input type="text" name="lastName" id="lastName" />
-    <label for="email">Email address:</label>
-    <input type="email" name="email" id="email" />
-    <br /><button id="submit">Submit</button> 
-    <button id="delete">Delete all</button>
-</div>	
+<!-- div data-role="fieldcontain">
+    <fieldset data-role="controlgroup" data-type="horizontal">
+         	<input type="radio" name="rb-login" id="rb-login" value="login" checked="checked" />
+         	<label for="rb-login">Login</label>
 
-<!-- div id="form">
-    <input id="firstName" type="text" placeholder="First name" autofocus></input>
-    <br /><input id="lastName" type="text"placeholder="Last name"></input>
-    <br /><input id="email" type="email" placeholder="Email address"></input>
-    <br /><button id="submit">Submit</button> <button id="delete">Delete all</button>
+         	<input type="radio" name="rb-admin" id="rb-admin" value="admin"  />
+         	<label for="rb-admin">Admin</label>
+
+         	<input type="radio" name="rb-component" id="rb-component" value="component"  />
+         	<label for="rb-component">Components</label>
+    </fieldset>
 </div -->
-<a href="#admin" data-role="nav-main">Go to admin</a>
-<button id="test">Trigger App.vent</button>
-<hr />
-<h2>Leads</h2>
-<div id="leads"></div>
+
+<button id="admin">Admin</button>
+<button id="component">Components</button>
