First pass demo at demonstrating coenrats approach to JQM integration

--- a/app/scripts/templates/login.html
+++ b/app/scripts/templates/login.html
@@ -1,15 +1,27 @@
-<!-- div data-role="fieldcontain">
-    <fieldset data-role="controlgroup" data-type="horizontal">
-         	<input type="radio" name="rb-login" id="rb-login" value="login" checked="checked" />
-         	<label for="rb-login">Login</label>
+<!-- div data-role="header">
+    <h1>Backbone, Require.js and jQuery Mobile prototype</h1>
+</div>
 
-         	<input type="radio" name="rb-admin" id="rb-admin" value="admin"  />
-         	<label for="rb-admin">Admin</label>
+<div id="content" data-role="content">   
+	<div data-role="fieldcontain">
+	    <fieldset data-role="controlgroup" data-type="horizontal">
+	         	<input type="radio" name="rb-login" id="rb-login" value="login" checked="checked" />
+	         	<label for="rb-login">Login</label>
 
-         	<input type="radio" name="rb-component" id="rb-component" value="component"  />
-         	<label for="rb-component">Components</label>
-    </fieldset>
+	         	<input type="radio" name="rb-admin" id="rb-admin" value="admin"  />
+	         	<label for="rb-admin">Admin</label>
+
+	         	<input type="radio" name="rb-component" id="rb-component" value="component"  />
+	         	<label for="rb-component">Components</label>
+	    </fieldset>
+	</div>
 </div -->
 
-<button id="admin">Admin</button>
-<button id="component">Components</button>
+<div data-role="header">
+    <h1>Backbone, Require.js and jQuery Mobile prototype</h1>
+</div>
+
+<div id="content" data-role="content">   
+	<button id="admin">Admin</button>
+	<button id="component">Components</button>   
+</div>
