--- a/app/scripts/templates/admin.html
+++ b/app/scripts/templates/admin.html
@@ -1,13 +1,21 @@
-<div id="form" data-role="fieldcontain">
-    <label for="firstName">First name:</label>
-    <input type="text" name="firstName" id="firstName" />
-    <label for="firstName">Last name:</label>
-    <input type="text" name="lastName" id="lastName" />
-    <label for="email">Email address:</label>
-    <input type="email" name="email" id="email" />
-    <br /><button id="submit">Submit</button> 
-    <button id="delete">Delete all</button>
-</div>	
-<hr />
-<h2>Leads</h2>
-<div id="leads"></div>
+<!-- TODO: we have some duplication in our templates which should be addressed -->
+<div data-role="header">
+    <h1>Backbone, Require.js and jQuery Mobile prototype</h1>
+</div>
+
+<div id="content" data-role="content">   
+	<div id="form" data-role="fieldcontain">
+	    <label for="firstName">First name:</label>
+	    <input type="text" name="firstName" id="firstName" />
+	    <label for="firstName">Last name:</label>
+	    <input type="text" name="lastName" id="lastName" />
+	    <label for="email">Email address:</label>
+	    <input type="email" name="email" id="email" />
+	    <br /><button id="submit">Submit</button> 
+	    <button id="delete">Delete all</button>
+	</div>	
+	<hr />
+	<h2>Leads</h2>
+	<div id="leads"></div>
+</div>
+
