Starting point for development

--- a/app/scripts/templates/admin.html
+++ b/app/scripts/templates/admin.html
@@ -3,7 +3,8 @@
     <h1>Backbone, Require.js and jQuery Mobile prototype</h1>
 </div>
 
-<div id="content" data-role="content">   
+<div id="content" data-role="content">  
+	<a href="#login" data-role="nav-main">Back</a> 
 	<div id="form" data-role="fieldcontain">
 	    <label for="firstName">First name:</label>
 	    <input type="text" name="firstName" id="firstName" />
