--- a/app/scripts/templates/component.html
+++ b/app/scripts/templates/component.html
@@ -10,6 +10,8 @@
     $("input[type='radio']").attr("checked",true).checkboxradio("refresh");
     -->
     
+    <a href="#login" data-role="nav-main">Back</a>
+
     <!-- RADIO BUTTONS IN A VERTICAL GROUP -->
 
     <div data-role="fieldcontain">
