--- a/app/scripts/templates/login.html
+++ b/app/scripts/templates/login.html
@@ -24,4 +24,5 @@
 <div id="content" data-role="content">   
 	<button id="admin">Admin</button>
 	<button id="component">Components</button>   
+	<button id="dialog">Dialog box</button>
 </div>
